--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blackout-theme",
-  "displayName": "blackout-theme",
+  "displayName": "Blackout Theme",
   "description": "Full blackout theme for VS Code",
   "version": "0.0.1",
   "publisher": "agustinduarte",
